Dark mode: Fix cookies notification icons

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -1080,7 +1080,7 @@ html.dark-mode ._54nc {
 	border-color: var(--container-color) !important;
 }
 /* Cookies notification: icons */
-html.dark-mode .img.sp_AP2jSXRv6iu {
+html.dark-mode .img.sp_ng1YXMZLXub {
 	filter: invert(0.66);
 }
 /* Cookies notification: rectangular boxes */
